Fixing overflow hidden on image sign contract

--- a/app/assets/stylesheets/components/_spinner.scss
+++ b/app/assets/stylesheets/components/_spinner.scss
@@ -5,6 +5,7 @@
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+  z-index: 1000;
 }
 
 // .loader-show{
@@ -25,10 +26,10 @@
   justify-content: center;
   align-items: center;
   display: none;
+  z-index: 1000;
 }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
