--- a/app/assets/stylesheets/contracts/_show.scss
+++ b/app/assets/stylesheets/contracts/_show.scss
@@ -21,7 +21,8 @@
 .container-show-contract .container-img {
   width: 40%;
   height: 90vh;
-  overflow: hidden;
+  background-size: cover;
+  background-position: center;
 
   align-self: center;
   display: flex;
